--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,4 +10,6 @@
     {{ form.as_p }}
     <input type="submit" class="btn btn-success" value="Log In">
 </form>
+<a class="nav-link" href="{% url 'password_reset' %}">Click here to reset paswword</a>
+
 {% endblock content %}
