--- a/templates/base.html
+++ b/templates/base.html
@@ -21,11 +21,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-                    <a class="nav-link active" aria-current="page" href="{% url 'about' %}">About</a>
+                    <a class="nav-link active" href="{% url 'home' %}">Home</a>
+                    <a class="nav-link active" href="{% url 'about' %}">About</a>
                     <a class="nav-link" href="{% url 'list' %}">Posts</a>
-                    <a class="nav-link" href="{% url 'new' %}">New Post</a>
                     {% if user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'archived' %}">Archived</a>
+                    <a class="nav-link" href="{% url 'drafts' %}">Drafts</a>
+                    <a class="nav-link" href="{% url 'new' %}">New Post</a>
+                    <a class="nav-link" href="{% url 'password_change' %}">Change Password</a>
                     <form method="POST" action="{% url 'logout' %}">
                         {% csrf_token %}
                         <input type="submit" class="nav-link " value="Log Out">
