--- a/templates/posts/detail.html
+++ b/templates/posts/detail.html
@@ -5,6 +5,13 @@
 {% block content %}
 <h1>{{ post.title }}</h1>
 <h3>{{ post.subtitle }}</h3>
-<small>Created on: {{ post.created_on }}</small>
+<small>By: {{ post.author }} | On {{ post.created_on }}</small>
 <p>{{ post.body }}</p>
+
+{% if user.is_authenticated %}
+{% if user == post.author %}
+<a class="btn btn-danger" href="{% url 'delete' post.id %}">Delete</a>
+{% endif %}
+{% endif %}
+
 {% endblock content %}
