--- a/templates/posts/edit.html
+++ b/templates/posts/edit.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 
-{% block title %}New Post{% endblock title %}
+{% block title %}Edit Post{% endblock title %}
 
 {% block content %}
-<h1>New Post</h1>
+
+<h1>Edit Post</h1>
 <form method="POST">
     {% csrf_token%}
     {{ form.as_p }}
-    <input type="submit" class="btn btn-success" value="create">
+    <input type="submit" class="btn btn-primary" value="edit">
 </form>
+
 {% endblock content %}
