--- a/templates/posts/list.html
+++ b/templates/posts/list.html
@@ -13,6 +13,7 @@
         <p class="card-text">{{ post.body|truncatechars:64 }}</p>
 
         <a href="{% url 'detail' post.id %}" class="card-link">Continue reading...</a>
+        <a href="{% url 'edit' post.id %}" class="card-link">Edit</a>
     </div>
 </div>
 <br />
